# Python

./: .gitignore  Day1.md  Kwargs_TypeHints.md  README.md  SysEnvVar.py  TASK_LIST.md  args_kwargs.py  color.py  fp-incident-gen.py  learning.py  main-1.py  main.py  project-A.py  stepik.py  sys_env.py  table.py  task.py  test_otp.py  testing.py  windows-info.py
AWS/: .env_BACKUP  .gitignore  README.md  README_PyPi.md  TASK_LIST.md  app.py  main.py  pip_libs.txt  pypi_prepare.sh  pypi_upload.sh  pyproject.toml  requirements.txt  sh_clear_pycache.sh  testing.py  upload_folder.py
AWS/ns_aws/: s3buckets.py
AWS/ns_config/: .env_BACKUP  libraries.py  logging.conf  settings.py
AWS/ns_console/: client.py
AWS/s3/: __main__.py  init.py  manager.py  s3buckets.py
AWS/s3/config/: environment.py  libraries.py  logging.py  settings.py
AWS/s3/console/: client.py
AWS/s3/converter/: converter.py
Class/: main.py
ComputerVision/: OpenCV.md  chapter1.py
Discovery/: discovery.py
Django/: .env_BACKUP  .gitignore  1-Django-Project.md  README.md  requirements.txt
EnvVariable/: .env  main.py
FastAPI/: 01_Project.py
Forcepoint/: gen_incidents.py
Games/: FindSmile.py
Learning/: Class.md  Open_File.py
Lib_Faker/: demo.py
Logger/: logging.conf  main.py
OTP/: .credentials  .env  ConstructorOTP.py  DBmodels.py  TokenOTP.py  generator.py  main.py
OpenCV/: chapter1.py  opencv-v1.py
Request/: main.py
SQLAlchemy/: .env  sql_alchemy.py  sql_connection.py  sql_create_table.py  sql_insert_data.py  sql_read_data.py  sql_table_list.py
TimeSheet/: .env  timer.py
(+325 files in other folders)
